force-app/main/default/objects/Cms_Admin_Data__c/Cms_Admin_Data__c.object-meta.xml
<CustomObject>
    <description>This object maintains the application parameters and definition for CMS</description>
    <label>Cms Admin Data</label>
    <nameField>
        <label>Admin Code</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Cms Admin Datas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>