force-app/main/default/objects/Cms_Admin_Data__c/fields/Admin_Code_Parent__c.field-meta.xml
<CustomField>
    <fullName>Admin_Code_Parent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The parent value be used to filtering criteria for the Value</description>
    <label>Admin Code Parent</label>
    <referenceTo>Cms_Admin_Data__c</referenceTo>
    <relationshipLabel>Admin Code Children</relationshipLabel>
    <relationshipName>Admin_Code_Children</relationshipName>
    <type>Lookup</type>
</CustomField>