force-app/main/default/objects/Cms_Admin_Data__c/fields/Delete_Indicator__c.field-meta.xml
<CustomField>
    <fullName>Delete_Indicator__c</fullName>
    <defaultValue>(&quot;N&quot;)</defaultValue>
    <description>Logical Delete Indicator(Y/N)</description>
    <label>Delete Indicator</label>
    <length>1</length>
    <type>Text</type>
</CustomField>