force-app/main/default/objects/Cms_Admin_Data__c/fields/Language__c.field-meta.xml
<CustomField>
    <fullName>Language__c</fullName>
    <description>English
Traditional Chinese
Simplified Chinese</description>
    <label>Language</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Language_Value_Sets</valueSetName>
    </valueSet>
</CustomField>